@@ -81,6 +81,8 @@ is pressed and current file is directory.
 
 * Updated jquery to v2.0.0.
 
+* Improved CloudFunc module.
+
 
 2012.03.01, Version 0.1.9
 
